--- a/src/path_planner/CMakeLists.txt
+++ b/src/path_planner/CMakeLists.txt
@@ -7,27 +7,29 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+
+include_directories(include)
+include_directories(include ${catkin_INCLUDE_DIRS})
+
 
 add_executable(map src/map.cpp)
+ament_target_dependencies(map
+  rclcpp)
+
+install(TARGETS map
+  DESTINATION lib/${PROJECT_NAME})
+
 target_include_directories(map PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
 target_compile_features(map PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
 
-install(TARGETS map
-  DESTINATION lib/${PROJECT_NAME})
+
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
   set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
