not able to display the map but build succeed

--- a/src/path_planner/CMakeLists.txt
+++ b/src/path_planner/CMakeLists.txt
@@ -8,14 +8,20 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(OpenCV REQUIRED)
 
 include_directories(include)
 include_directories(include ${catkin_INCLUDE_DIRS})
-
+include_directories(include ${OpenCV_INCLUDE_DIRS})
 
 add_executable(map src/map.cpp)
 ament_target_dependencies(map
-  rclcpp)
+  rclcpp
+  nav_msgs
+  geometry_msgs
+)
 
 install(TARGETS map
   DESTINATION lib/${PROJECT_NAME})
@@ -24,7 +30,7 @@ target_include_directories(map PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
 target_compile_features(map PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
-
+target_link_libraries(map ${OpenCV_LIBS})
 
 
 if(BUILD_TESTING)
